examples/errors/defined4.spl
foo(aap: Int, aap: Int) {
    var aap = 3;
    print(aap);
}

main() {foo(1,2);}